ParTinyPlus.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from ParTinyPlus.y
-----------------------------------------------------------------------------

state 79 contains 15 shift/reduce conflicts.

rule 36 is unused
rule 37 is unused
rule 38 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListTopDef 'main' Block                 (4)
	Program -> 'main' Block                            (5)
	TopDef -> Type Ident '(' ListArg ')' Block         (6)
	ListTopDef -> TopDef                               (7)
	ListTopDef -> TopDef ListTopDef                    (8)
	Arg -> Type Ident                                  (9)
	Arg -> Type Ident '[' ']'                          (10)
	Arg -> Type '&' Ident                              (11)
	ListArg ->                                         (12)
	ListArg -> Arg                                     (13)
	ListArg -> Arg ',' ListArg                         (14)
	Block -> '[' ListDecl ']' '{' Stmt '}'             (15)
	Block -> '{' Stmt '}'                              (16)
	Decl -> Type Item                                  (17)
	Item -> Ident                                      (18)
	Item -> Ident '=' Expr                             (19)
	Item -> Ident '[' Expr ']'                         (20)
	ListDecl -> Decl                                   (21)
	ListDecl -> Decl ';' ListDecl                      (22)
	Stmt -> Stmt Stmt                                  (23)
	Stmt -> ';'                                        (24)
	Stmt -> Block                                      (25)
	Stmt -> LValue '=' Expr ';'                        (26)
	Stmt -> Expr ';'                                   (27)
	Stmt -> 'return' Expr ';'                          (28)
	Stmt -> 'if' '(' Expr ')' Block                    (29)
	Stmt -> 'if' '(' Expr ')' Block 'else' Block       (30)
	Stmt -> 'while' '(' Expr ')' Block                 (31)
	Stmt -> 'print' ListExpr ';'                       (32)
	Type -> 'int'                                      (33)
	Type -> 'string'                                   (34)
	Type -> 'bool'                                     (35)
	ListType ->                                        (36)
	ListType -> Type                                   (37)
	ListType -> Type ',' ListType                      (38)
	LValue -> Ident                                    (39)
	LValue -> Ident '[' Expr ']'                       (40)
	Expr6 -> LValue                                    (41)
	Expr6 -> Integer                                   (42)
	Expr6 -> 'true'                                    (43)
	Expr6 -> 'false'                                   (44)
	Expr6 -> Ident '(' ListExpr ')'                    (45)
	Expr6 -> String                                    (46)
	Expr6 -> Expr7                                     (47)
	Expr5 -> '-' Expr6                                 (48)
	Expr5 -> '!' Expr6                                 (49)
	Expr5 -> Expr6                                     (50)
	Expr4 -> Expr4 MulOp Expr5                         (51)
	Expr4 -> Expr5                                     (52)
	Expr3 -> Expr3 AddOp Expr4                         (53)
	Expr3 -> Expr4                                     (54)
	Expr2 -> Expr2 RelOp Expr3                         (55)
	Expr2 -> Expr3                                     (56)
	Expr1 -> Expr2 '&&' Expr1                          (57)
	Expr1 -> Expr2                                     (58)
	Expr -> Expr1 '||' Expr                            (59)
	Expr -> Expr1                                      (60)
	Expr7 -> '(' Expr ')'                              (61)
	ListExpr ->                                        (62)
	ListExpr -> Expr                                   (63)
	ListExpr -> Expr ',' ListExpr                      (64)
	AddOp -> '+'                                       (65)
	AddOp -> '-'                                       (66)
	MulOp -> '*'                                       (67)
	MulOp -> '/'                                       (68)
	MulOp -> '%'                                       (69)
	RelOp -> '<'                                       (70)
	RelOp -> '<='                                      (71)
	RelOp -> '>'                                       (72)
	RelOp -> '>='                                      (73)
	RelOp -> '=='                                      (74)
	RelOp -> '!='                                      (75)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	','            { PT _ (TS _ 10) }
	'-'            { PT _ (TS _ 11) }
	'/'            { PT _ (TS _ 12) }
	';'            { PT _ (TS _ 13) }
	'<'            { PT _ (TS _ 14) }
	'<='           { PT _ (TS _ 15) }
	'='            { PT _ (TS _ 16) }
	'=='           { PT _ (TS _ 17) }
	'>'            { PT _ (TS _ 18) }
	'>='           { PT _ (TS _ 19) }
	'['            { PT _ (TS _ 20) }
	']'            { PT _ (TS _ 21) }
	'bool'         { PT _ (TS _ 22) }
	'else'         { PT _ (TS _ 23) }
	'false'        { PT _ (TS _ 24) }
	'if'           { PT _ (TS _ 25) }
	'int'          { PT _ (TS _ 26) }
	'main'         { PT _ (TS _ 27) }
	'print'        { PT _ (TS _ 28) }
	'return'       { PT _ (TS _ 29) }
	'string'       { PT _ (TS _ 30) }
	'true'         { PT _ (TS _ 31) }
	'while'        { PT _ (TS _ 32) }
	'{'            { PT _ (TS _ 33) }
	'||'           { PT _ (TS _ 34) }
	'}'            { PT _ (TS _ 35) }
	L_Ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rules 4, 5
	TopDef          rule  6
	ListTopDef      rules 7, 8
	Arg             rules 9, 10, 11
	ListArg         rules 12, 13, 14
	Block           rules 15, 16
	Decl            rule  17
	Item            rules 18, 19, 20
	ListDecl        rules 21, 22
	Stmt            rules 23, 24, 25, 26, 27, 28, 29, 30, 31, 32
	Type            rules 33, 34, 35
	ListType        rules 36, 37, 38
	LValue          rules 39, 40
	Expr6           rules 41, 42, 43, 44, 45, 46, 47
	Expr5           rules 48, 49, 50
	Expr4           rules 51, 52
	Expr3           rules 53, 54
	Expr2           rules 55, 56
	Expr1           rules 57, 58
	Expr            rules 59, 60
	Expr7           rule  61
	ListExpr        rules 62, 63, 64
	AddOp           rules 65, 66
	MulOp           rules 67, 68, 69
	RelOp           rules 70, 71, 72, 73, 74, 75

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	'bool'         shift, and enter state 7
	'int'          shift, and enter state 8
	'main'         shift, and enter state 9
	'string'       shift, and enter state 10

	Program        goto state 3
	TopDef         goto state 4
	ListTopDef     goto state 5
	Type           goto state 6

State 1

	Ident -> . L_Ident                                  (rule 1)

	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'/'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'['            reduce using rule 1
	']'            reduce using rule 1
	'||'           reduce using rule 1


State 3

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 4

	ListTopDef -> TopDef .                              (rule 7)
	ListTopDef -> TopDef . ListTopDef                   (rule 8)

	'bool'         shift, and enter state 7
	'int'          shift, and enter state 8
	'main'         reduce using rule 7
	'string'       shift, and enter state 10

	TopDef         goto state 4
	ListTopDef     goto state 16
	Type           goto state 6

State 5

	Program -> ListTopDef . 'main' Block                (rule 4)

	'main'         shift, and enter state 15


State 6

	TopDef -> Type . Ident '(' ListArg ')' Block        (rule 6)

	L_Ident        shift, and enter state 2

	Ident          goto state 14

State 7

	Type -> 'bool' .                                    (rule 35)

	'&'            reduce using rule 35
	L_Ident        reduce using rule 35


State 8

	Type -> 'int' .                                     (rule 33)

	'&'            reduce using rule 33
	L_Ident        reduce using rule 33


State 9

	Program -> 'main' . Block                           (rule 5)

	'['            shift, and enter state 12
	'{'            shift, and enter state 13

	Block          goto state 11

State 10

	Type -> 'string' .                                  (rule 34)

	'&'            reduce using rule 34
	L_Ident        reduce using rule 34


State 11

	Program -> 'main' Block .                           (rule 5)

	%eof           reduce using rule 5


State 12

	Block -> '[' . ListDecl ']' '{' Stmt '}'            (rule 15)

	'bool'         shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 10

	Decl           goto state 45
	ListDecl       goto state 46
	Type           goto state 47

State 13

	Block -> '{' . Stmt '}'                             (rule 16)

	'!'            shift, and enter state 33
	'('            shift, and enter state 34
	'-'            shift, and enter state 35
	';'            shift, and enter state 36
	'['            shift, and enter state 12
	'false'        shift, and enter state 37
	'if'           shift, and enter state 38
	'print'        shift, and enter state 39
	'return'       shift, and enter state 40
	'true'         shift, and enter state 41
	'while'        shift, and enter state 42
	'{'            shift, and enter state 13
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 43
	L_quoted       shift, and enter state 44

	Ident          goto state 19
	Integer        goto state 20
	String         goto state 21
	Block          goto state 22
	Stmt           goto state 23
	LValue         goto state 24
	Expr6          goto state 25
	Expr5          goto state 26
	Expr4          goto state 27
	Expr3          goto state 28
	Expr2          goto state 29
	Expr1          goto state 30
	Expr           goto state 31
	Expr7          goto state 32

State 14

	TopDef -> Type Ident . '(' ListArg ')' Block        (rule 6)

	'('            shift, and enter state 18


State 15

	Program -> ListTopDef 'main' . Block                (rule 4)

	'['            shift, and enter state 12
	'{'            shift, and enter state 13

	Block          goto state 17

State 16

	ListTopDef -> TopDef ListTopDef .                   (rule 8)

	'main'         reduce using rule 8


State 17

	Program -> ListTopDef 'main' Block .                (rule 4)

	%eof           reduce using rule 4


State 18

	TopDef -> Type Ident '(' . ListArg ')' Block        (rule 6)

	')'            reduce using rule 12
	'bool'         shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 10

	Arg            goto state 83
	ListArg        goto state 84
	Type           goto state 85

State 19

	LValue -> Ident .                                   (rule 39)
	LValue -> Ident . '[' Expr ']'                      (rule 40)
	Expr6 -> Ident . '(' ListExpr ')'                   (rule 45)

	'!='           reduce using rule 39
	'%'            reduce using rule 39
	'&&'           reduce using rule 39
	'('            shift, and enter state 81
	')'            reduce using rule 39
	'*'            reduce using rule 39
	'+'            reduce using rule 39
	','            reduce using rule 39
	'-'            reduce using rule 39
	'/'            reduce using rule 39
	';'            reduce using rule 39
	'<'            reduce using rule 39
	'<='           reduce using rule 39
	'='            reduce using rule 39
	'=='           reduce using rule 39
	'>'            reduce using rule 39
	'>='           reduce using rule 39
	'['            shift, and enter state 82
	']'            reduce using rule 39
	'||'           reduce using rule 39


State 20

	Expr6 -> Integer .                                  (rule 42)

	'!='           reduce using rule 42
	'%'            reduce using rule 42
	'&&'           reduce using rule 42
	')'            reduce using rule 42
	'*'            reduce using rule 42
	'+'            reduce using rule 42
	','            reduce using rule 42
	'-'            reduce using rule 42
	'/'            reduce using rule 42
	';'            reduce using rule 42
	'<'            reduce using rule 42
	'<='           reduce using rule 42
	'=='           reduce using rule 42
	'>'            reduce using rule 42
	'>='           reduce using rule 42
	']'            reduce using rule 42
	'||'           reduce using rule 42


State 21

	Expr6 -> String .                                   (rule 46)

	'!='           reduce using rule 46
	'%'            reduce using rule 46
	'&&'           reduce using rule 46
	')'            reduce using rule 46
	'*'            reduce using rule 46
	'+'            reduce using rule 46
	','            reduce using rule 46
	'-'            reduce using rule 46
	'/'            reduce using rule 46
	';'            reduce using rule 46
	'<'            reduce using rule 46
	'<='           reduce using rule 46
	'=='           reduce using rule 46
	'>'            reduce using rule 46
	'>='           reduce using rule 46
	']'            reduce using rule 46
	'||'           reduce using rule 46


State 22

	Stmt -> Block .                                     (rule 25)

	'!'            reduce using rule 25
	'('            reduce using rule 25
	'-'            reduce using rule 25
	';'            reduce using rule 25
	'['            reduce using rule 25
	'false'        reduce using rule 25
	'if'           reduce using rule 25
	'print'        reduce using rule 25
	'return'       reduce using rule 25
	'true'         reduce using rule 25
	'while'        reduce using rule 25
	'{'            reduce using rule 25
	'}'            reduce using rule 25
	L_Ident        reduce using rule 25
	L_integ        reduce using rule 25
	L_quoted       reduce using rule 25


State 23

	Block -> '{' Stmt . '}'                             (rule 16)
	Stmt -> Stmt . Stmt                                 (rule 23)

	'!'            shift, and enter state 33
	'('            shift, and enter state 34
	'-'            shift, and enter state 35
	';'            shift, and enter state 36
	'['            shift, and enter state 12
	'false'        shift, and enter state 37
	'if'           shift, and enter state 38
	'print'        shift, and enter state 39
	'return'       shift, and enter state 40
	'true'         shift, and enter state 41
	'while'        shift, and enter state 42
	'{'            shift, and enter state 13
	'}'            shift, and enter state 80
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 43
	L_quoted       shift, and enter state 44

	Ident          goto state 19
	Integer        goto state 20
	String         goto state 21
	Block          goto state 22
	Stmt           goto state 79
	LValue         goto state 24
	Expr6          goto state 25
	Expr5          goto state 26
	Expr4          goto state 27
	Expr3          goto state 28
	Expr2          goto state 29
	Expr1          goto state 30
	Expr           goto state 31
	Expr7          goto state 32

State 24

	Stmt -> LValue . '=' Expr ';'                       (rule 26)
	Expr6 -> LValue .                                   (rule 41)

	'!='           reduce using rule 41
	'%'            reduce using rule 41
	'&&'           reduce using rule 41
	'*'            reduce using rule 41
	'+'            reduce using rule 41
	'-'            reduce using rule 41
	'/'            reduce using rule 41
	';'            reduce using rule 41
	'<'            reduce using rule 41
	'<='           reduce using rule 41
	'='            shift, and enter state 78
	'=='           reduce using rule 41
	'>'            reduce using rule 41
	'>='           reduce using rule 41
	'||'           reduce using rule 41


State 25

	Expr5 -> Expr6 .                                    (rule 50)

	'!='           reduce using rule 50
	'%'            reduce using rule 50
	'&&'           reduce using rule 50
	')'            reduce using rule 50
	'*'            reduce using rule 50
	'+'            reduce using rule 50
	','            reduce using rule 50
	'-'            reduce using rule 50
	'/'            reduce using rule 50
	';'            reduce using rule 50
	'<'            reduce using rule 50
	'<='           reduce using rule 50
	'=='           reduce using rule 50
	'>'            reduce using rule 50
	'>='           reduce using rule 50
	']'            reduce using rule 50
	'||'           reduce using rule 50


State 26

	Expr4 -> Expr5 .                                    (rule 52)

	'!='           reduce using rule 52
	'%'            reduce using rule 52
	'&&'           reduce using rule 52
	')'            reduce using rule 52
	'*'            reduce using rule 52
	'+'            reduce using rule 52
	','            reduce using rule 52
	'-'            reduce using rule 52
	'/'            reduce using rule 52
	';'            reduce using rule 52
	'<'            reduce using rule 52
	'<='           reduce using rule 52
	'=='           reduce using rule 52
	'>'            reduce using rule 52
	'>='           reduce using rule 52
	']'            reduce using rule 52
	'||'           reduce using rule 52


State 27

	Expr4 -> Expr4 . MulOp Expr5                        (rule 51)
	Expr3 -> Expr4 .                                    (rule 54)

	'!='           reduce using rule 54
	'%'            shift, and enter state 75
	'&&'           reduce using rule 54
	')'            reduce using rule 54
	'*'            shift, and enter state 76
	'+'            reduce using rule 54
	','            reduce using rule 54
	'-'            reduce using rule 54
	'/'            shift, and enter state 77
	';'            reduce using rule 54
	'<'            reduce using rule 54
	'<='           reduce using rule 54
	'=='           reduce using rule 54
	'>'            reduce using rule 54
	'>='           reduce using rule 54
	']'            reduce using rule 54
	'||'           reduce using rule 54

	MulOp          goto state 74

State 28

	Expr3 -> Expr3 . AddOp Expr4                        (rule 53)
	Expr2 -> Expr3 .                                    (rule 56)

	'!='           reduce using rule 56
	'&&'           reduce using rule 56
	')'            reduce using rule 56
	'+'            shift, and enter state 72
	','            reduce using rule 56
	'-'            shift, and enter state 73
	';'            reduce using rule 56
	'<'            reduce using rule 56
	'<='           reduce using rule 56
	'=='           reduce using rule 56
	'>'            reduce using rule 56
	'>='           reduce using rule 56
	']'            reduce using rule 56
	'||'           reduce using rule 56

	AddOp          goto state 71

State 29

	Expr2 -> Expr2 . RelOp Expr3                        (rule 55)
	Expr1 -> Expr2 . '&&' Expr1                         (rule 57)
	Expr1 -> Expr2 .                                    (rule 58)

	'!='           shift, and enter state 64
	'&&'           shift, and enter state 65
	')'            reduce using rule 58
	','            reduce using rule 58
	';'            reduce using rule 58
	'<'            shift, and enter state 66
	'<='           shift, and enter state 67
	'=='           shift, and enter state 68
	'>'            shift, and enter state 69
	'>='           shift, and enter state 70
	']'            reduce using rule 58
	'||'           reduce using rule 58

	RelOp          goto state 63

State 30

	Expr -> Expr1 . '||' Expr                           (rule 59)
	Expr -> Expr1 .                                     (rule 60)

	')'            reduce using rule 60
	','            reduce using rule 60
	';'            reduce using rule 60
	']'            reduce using rule 60
	'||'           shift, and enter state 62


State 31

	Stmt -> Expr . ';'                                  (rule 27)

	';'            shift, and enter state 61


State 32

	Expr6 -> Expr7 .                                    (rule 47)

	'!='           reduce using rule 47
	'%'            reduce using rule 47
	'&&'           reduce using rule 47
	')'            reduce using rule 47
	'*'            reduce using rule 47
	'+'            reduce using rule 47
	','            reduce using rule 47
	'-'            reduce using rule 47
	'/'            reduce using rule 47
	';'            reduce using rule 47
	'<'            reduce using rule 47
	'<='           reduce using rule 47
	'=='           reduce using rule 47
	'>'            reduce using rule 47
	'>='           reduce using rule 47
	']'            reduce using rule 47
	'||'           reduce using rule 47


State 33

	Expr5 -> '!' . Expr6                                (rule 49)

	'('            shift, and enter state 34
	'false'        shift, and enter state 37
	'true'         shift, and enter state 41
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 43
	L_quoted       shift, and enter state 44

	Ident          goto state 19
	Integer        goto state 20
	String         goto state 21
	LValue         goto state 53
	Expr6          goto state 60
	Expr7          goto state 32

State 34

	Expr7 -> '(' . Expr ')'                             (rule 61)

	'!'            shift, and enter state 33
	'('            shift, and enter state 34
	'-'            shift, and enter state 35
	'false'        shift, and enter state 37
	'true'         shift, and enter state 41
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 43
	L_quoted       shift, and enter state 44

	Ident          goto state 19
	Integer        goto state 20
	String         goto state 21
	LValue         goto state 53
	Expr6          goto state 25
	Expr5          goto state 26
	Expr4          goto state 27
	Expr3          goto state 28
	Expr2          goto state 29
	Expr1          goto state 30
	Expr           goto state 59
	Expr7          goto state 32

State 35

	Expr5 -> '-' . Expr6                                (rule 48)

	'('            shift, and enter state 34
	'false'        shift, and enter state 37
	'true'         shift, and enter state 41
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 43
	L_quoted       shift, and enter state 44

	Ident          goto state 19
	Integer        goto state 20
	String         goto state 21
	LValue         goto state 53
	Expr6          goto state 58
	Expr7          goto state 32

State 36

	Stmt -> ';' .                                       (rule 24)

	'!'            reduce using rule 24
	'('            reduce using rule 24
	'-'            reduce using rule 24
	';'            reduce using rule 24
	'['            reduce using rule 24
	'false'        reduce using rule 24
	'if'           reduce using rule 24
	'print'        reduce using rule 24
	'return'       reduce using rule 24
	'true'         reduce using rule 24
	'while'        reduce using rule 24
	'{'            reduce using rule 24
	'}'            reduce using rule 24
	L_Ident        reduce using rule 24
	L_integ        reduce using rule 24
	L_quoted       reduce using rule 24


State 37

	Expr6 -> 'false' .                                  (rule 44)

	'!='           reduce using rule 44
	'%'            reduce using rule 44
	'&&'           reduce using rule 44
	')'            reduce using rule 44
	'*'            reduce using rule 44
	'+'            reduce using rule 44
	','            reduce using rule 44
	'-'            reduce using rule 44
	'/'            reduce using rule 44
	';'            reduce using rule 44
	'<'            reduce using rule 44
	'<='           reduce using rule 44
	'=='           reduce using rule 44
	'>'            reduce using rule 44
	'>='           reduce using rule 44
	']'            reduce using rule 44
	'||'           reduce using rule 44


State 38

	Stmt -> 'if' . '(' Expr ')' Block                   (rule 29)
	Stmt -> 'if' . '(' Expr ')' Block 'else' Block      (rule 30)

	'('            shift, and enter state 57


State 39

	Stmt -> 'print' . ListExpr ';'                      (rule 32)

	'!'            shift, and enter state 33
	'('            shift, and enter state 34
	'-'            shift, and enter state 35
	';'            reduce using rule 62
	'false'        shift, and enter state 37
	'true'         shift, and enter state 41
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 43
	L_quoted       shift, and enter state 44

	Ident          goto state 19
	Integer        goto state 20
	String         goto state 21
	LValue         goto state 53
	Expr6          goto state 25
	Expr5          goto state 26
	Expr4          goto state 27
	Expr3          goto state 28
	Expr2          goto state 29
	Expr1          goto state 30
	Expr           goto state 55
	Expr7          goto state 32
	ListExpr       goto state 56

State 40

	Stmt -> 'return' . Expr ';'                         (rule 28)

	'!'            shift, and enter state 33
	'('            shift, and enter state 34
	'-'            shift, and enter state 35
	'false'        shift, and enter state 37
	'true'         shift, and enter state 41
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 43
	L_quoted       shift, and enter state 44

	Ident          goto state 19
	Integer        goto state 20
	String         goto state 21
	LValue         goto state 53
	Expr6          goto state 25
	Expr5          goto state 26
	Expr4          goto state 27
	Expr3          goto state 28
	Expr2          goto state 29
	Expr1          goto state 30
	Expr           goto state 54
	Expr7          goto state 32

State 41

	Expr6 -> 'true' .                                   (rule 43)

	'!='           reduce using rule 43
	'%'            reduce using rule 43
	'&&'           reduce using rule 43
	')'            reduce using rule 43
	'*'            reduce using rule 43
	'+'            reduce using rule 43
	','            reduce using rule 43
	'-'            reduce using rule 43
	'/'            reduce using rule 43
	';'            reduce using rule 43
	'<'            reduce using rule 43
	'<='           reduce using rule 43
	'=='           reduce using rule 43
	'>'            reduce using rule 43
	'>='           reduce using rule 43
	']'            reduce using rule 43
	'||'           reduce using rule 43


State 42

	Stmt -> 'while' . '(' Expr ')' Block                (rule 31)

	'('            shift, and enter state 52


State 43

	Integer -> L_integ .                                (rule 2)

	'!='           reduce using rule 2
	'%'            reduce using rule 2
	'&&'           reduce using rule 2
	')'            reduce using rule 2
	'*'            reduce using rule 2
	'+'            reduce using rule 2
	','            reduce using rule 2
	'-'            reduce using rule 2
	'/'            reduce using rule 2
	';'            reduce using rule 2
	'<'            reduce using rule 2
	'<='           reduce using rule 2
	'=='           reduce using rule 2
	'>'            reduce using rule 2
	'>='           reduce using rule 2
	']'            reduce using rule 2
	'||'           reduce using rule 2


State 44

	String -> L_quoted .                                (rule 3)
